{
    "name": "Inputs",
    "maps": [
        {
            "name": "UI",
            "id": "4db94ae3-dacd-4ba0-b6a7-4fddab1cce6b",
            "actions": [
                {
                    "name": "Navigate",
                    "id": "9fa58731-3f01-4536-8a1a-c31c62336762",
                    "expectedControlLayout": "Vector2",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Submit",
                    "id": "3c0508a5-2bd8-4679-9dfc-520b7454a666",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Cancel",
                    "id": "874910d8-3ae4-4081-8b73-2aa65a01862a",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Point",
                    "id": "42498a1d-4ce3-4629-ac09-29b7487f3a02",
                    "expectedControlLayout": "Vector2",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Click",
                    "id": "15852efe-cc17-48fd-b94b-95f224587b06",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ba238d0-e6c7-41a8-aabe-110e1605f689",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "fa2bd128-a187-4481-8687-44d6a4d66719",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "44c66fe5-42c0-45db-aeb4-ea8f9ab7f25e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "552ff2df-b057-4c5f-b2a0-ecafff28057e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d48f6b0f-2261-418c-ab3c-e2adb917153b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "e83d37ab-9def-42a6-a4e4-c73c156f44a3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d2cf261c-9fc2-4889-89ec-c5c16753e97b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "3c7a192a-5e06-4587-9b49-ebe26fda8e88",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "WASD",
                    "id": "236ded28-0336-49af-b447-2fe18dcce260",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "0d8cadd1-015d-4f7a-a1e5-16a211cf40fc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "fc22d5dd-7c82-4434-beeb-6ca1ede3ae1e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "a8768f59-1cde-46e6-a029-5188efdae428",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "79022d51-abf0-4d7f-af27-a49453f0352e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Arrows",
                    "id": "ce18a17a-6cbf-4b03-9970-a45c18bd4edf",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "e3137bec-3f60-46c4-9d0a-8f15f283c883",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "f176137f-1fd8-4185-9268-f5fa56da6470",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "d98a7d65-c186-4845-9d07-8ab4fb2012bc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "627f8fc9-cf48-4153-a0ef-0c7f3295ae0d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "Player",
            "id": "03ba1424-baf7-4d0e-af2d-bc628947dd69",
            "actions": [
                {
                    "name": "Move",
                    "id": "613208b4-9431-4ab4-b7e0-44ac1e3d06a6",
                    "expectedControlLayout": "Vector2",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RunAndDodge",
                    "id": "67109cc3-8494-471a-af17-866b08a57c0e",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Look",
                    "id": "ab8714b4-3a20-491a-9868-7318b9b71c93",
                    "expectedControlLayout": "Vector2",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Attack",
                    "id": "a775e4fd-e153-4bd2-b010-4c35c28c90b3",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "TargetLock",
                    "id": "1106d524-5dc4-4b2f-960e-67d3c74592c0",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "SwitchTarget",
                    "id": "6335f20a-254b-4f3f-92d4-87d3e7a2bba9",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c6e0611-390b-4196-b6b4-5a9235e4543c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "WASD",
                    "id": "356e11ec-9e42-47ad-8d3c-a9caf304cf1d",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "ec136778-a37a-451f-88e7-fcaa999b0ee0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "bfc0354c-d8c3-478b-8acb-4388c560f3de",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "4c9e3aa7-54a4-4e0b-9d73-350c3251da46",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "d9779ce8-8aee-4be3-8872-d906655d7794",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Arrows",
                    "id": "f454fdca-b2c0-4d11-8df1-1cc895417407",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "916034d4-7eca-4744-8413-d1ab39da9a5c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "608e3a00-bbf4-4f2b-a4d7-afa518c93751",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "0e80619f-ee95-4e0a-9119-fc1f5019b3b6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "1055d16f-4ed8-4118-910e-69b853c82e0f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse;KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "519cdf6e-7049-4798-b9b4-251cf9c0386d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "7e0d0661-8a22-4c45-8e93-64f0f120bd62",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "6b48650e-1177-45a0-a8b5-4a9036e4fa03",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "dbd51980-a26e-4c0e-8310-2732a07ea8df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "b37d6132-c12e-4946-8000-d119f89cea39",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "TargetLock",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "fb129c5e-e8b2-4840-bcd8-7f9fc3f66fd5",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "TargetLock",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "c017f771-6ed9-4dc7-8e60-b3388c9f5dde",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "TargetLock",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "e3af22c2-c39e-45fd-a7f0-ff1a6109dbbe",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "47231867-1224-414e-8d64-570651052c90",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "dbad367d-0b5c-4b9c-a589-1ab95e3d17f9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KBM",
                    "action": "RunAndDodge",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "0741c4b7-d735-486c-b029-f6cb4b592c9b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "RunAndDodge",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "basedOn": "",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "basedOn": "",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}